ZTE MF833V: IMSI read failure during init if a pin code is required
Hi,
With the ZTE MF833V modem and Modem Manager 1.14.8 (or master), I remark that if the SIM card requires a PIN code and I unlock it, the IMSI information is still not available in mmcli output.
"mmcli -i any":
-------------------------------
General | path: /org/freedesktop/ModemManager1/SIM/0
-------------------------------
Properties | active: yes
| iccid: 8933xxxx
| operator name: Orange F
According to debug logs, the +CIMI AT command failed:
ModemManager[201083]: <debug> [1610719757.984547] [modem0/sim0] loading IMSI...
ModemManager[201083]: <debug> [1610719757.984584] [modem0/ttyUSB3/at] device open count is 3 (open)
ModemManager[201083]: <debug> [1610719757.984640] [modem0/ttyUSB3/at] device open count is 2 (close)
ModemManager[201083]: <debug> [1610719757.984691] [modem0/ttyUSB3/at] --> 'AT+CIMI<CR>'
ModemManager[201083]: <debug> [1610719757.993786] [modem0/ttyUSB3/at] <-- '<CR><LF>ERROR<CR><LF>'
ModemManager[201083]: <debug> [1610719757.993895] [modem0/ttyUSB3/at] operation failure: 100 (Unknown error)
ModemManager[201083]: <warn> [1610719757.993971] [modem0/sim0] couldn't load IMSI: Unknown error
If asked with the AT debug command, it is correctly read:
mmcli -m any --command=AT+CIMI:
response: '20801xxxx'
ModemManager[201083]: <debug> [1610719780.260333] [modem0/ttyUSB3/at] device open count is 2 (open)
ModemManager[201083]: <debug> [1610719780.260579] [modem0/ttyUSB3/at] --> 'AT+CIMI<CR>'
ModemManager[201083]: <debug> [1610719780.270308] [modem0/ttyUSB3/at] <-- '<CR><LF>20801xxxx<CR><LF><CR><LF>OK<CR><LF>'
ModemManager[201083]: <debug> [1610719780.270751] [modem0/ttyUSB3/at] device open count is 1 (close)
Looking for similar issues with +CIMI in Modem Manager git history, it seems often related to timing issues and saw that many plugins add a delay after the SIM unlock. I've made a patch for adding this delay in the ZTE plugin and it seems to fix the issue for +CIMI and some other AT commands too (CSCS for instance). I don't have any other ZTE models to check if they are affected by the same issue.
What do you think about the issue ?
Modem Manager version: master (17ea1dfa)
patch: 0001-zte-add-1-second-delay-after-sim-unlock-to-avoid-IMS.patch
debug logs: mm_debug_master.log debug logs (with patch): mm_debug_master_with_patch.log