zte: add 1 second delay after sim unlock to avoid IMSI reading issue

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/306

Signed-off-by: Louis-Alexis Eyraud <louis-alexis.eyraud@sigfox.com>
(cherry picked from commit 9c353cf6f0a7650cfe1b914d6881890de9dff0b0)